--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
       <!-- Contact Info -->
       <div class="text-gray-300 space-y-6">
         <h3 class="text-3xl font-bold mb-4 text-white">Get in Touch</h3>
-        <p class="flex items-center gap-3 text-lg">📧 <a href="mailto:sebastian@kingstonit.ca" class="underline hover:text-teal-400 transition">sebastian@kingstonit.ca</a></p>
-        <p class="flex items-center gap-3 text-lg">📞 <a href="tel:+16136613443" class="underline hover:text-teal-400 transition">+1 (613) 555-1234</a></p>
+        <p class="flex items-center gap-3 text-lg">📧 <a href="mailto:techmate.seb@gmail.com" class="underline hover:text-teal-400 transition">techmate.seb@gmail.com</a></p>
+        <p class="flex items-center gap-3 text-lg">📞 <a href="tel:+16136613443" class="underline hover:text-teal-400 transition">+1 (613) 661-3443</a></p>
         <p class="flex items-center gap-3 text-lg">📍 Kingston, Ontario</p>
         <p class="mt-6 text-gray-400 italic">I’m happy to answer questions or set up a free consultation. Let’s figure out your tech needs together!</p>
       </div>
@@ -192,5 +192,7 @@
 
 </body>
 </html>
+
+
 
 
