--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- Contact Form -->
       <div class="bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-2xl transition">
         <h3 class="text-3xl font-bold mb-6 text-white text-center">Send a Message</h3>
-        <form action="#" method="POST" class="space-y-4">
+        <form action="https://formspree.io/f/myzdlreb" method="POST" class="space-y-4">
           <div class="relative">
             <span class="absolute left-3 top-3 text-gray-400">👤</span>
             <input type="text" placeholder="Your Name" class="w-full p-3 pl-10 rounded text-gray-800" required>
@@ -174,7 +174,7 @@
       <div class="text-gray-300 space-y-6">
         <h3 class="text-3xl font-bold mb-4 text-white">Get in Touch</h3>
         <p class="flex items-center gap-3 text-lg">📧 <a href="mailto:techmate.seb@gmail.com" class="underline hover:text-teal-400 transition">techmate.seb@gmail.com</a></p>
-        <p class="flex items-center gap-3 text-lg">📞 <a href="tel:+16136613443" class="underline hover:text-teal-400 transition">+1 (613) 661-3443</a></p>
+        <p class="flex items-center gap-3 text-lg">📞 Please text, I'll get back faster! <a href="tel:+16136613443" class="underline hover:text-teal-400 transition">+1 (613) 661-3443</a></p>
         <p class="flex items-center gap-3 text-lg">📍 Kingston, Ontario</p>
         <p class="mt-6 text-gray-400 italic">I’m happy to answer questions or set up a free consultation. Let’s figure out your tech needs together!</p>
       </div>
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
