--- a/index.html
+++ b/index.html
@@ -151,26 +151,56 @@
     <!-- Contact Form -->
     <div class="bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-2xl transition">
       <h3 class="text-3xl font-bold mb-6 text-white text-center">Send a Message</h3>
-      <form action="https://formspree.io/f/myzdlreb" method="POST" class="space-y-4">
-  <!-- Redirect after submit -->
-  <input type="hidden" name="_redirect" value="https://techmate.solutions/thanks.html">
+      
+      <!-- Form wrapper -->
+      <div id="form-wrapper">
+        <form id="contact-form" class="space-y-4">
+          <div class="relative">
+            <span class="absolute left-3 top-3 text-gray-400">👤</span>
+            <input type="text" name="name" placeholder="Your Name" class="w-full p-3 pl-10 rounded text-gray-800" required>
+          </div>
+          <div class="relative">
+            <span class="absolute left-3 top-3 text-gray-400">📧</span>
+            <input type="email" name="email" placeholder="Your Email" class="w-full p-3 pl-10 rounded text-gray-800" required>
+          </div>
+          <div class="relative">
+            <span class="absolute left-3 top-3 text-gray-400">💬</span>
+            <textarea name="message" placeholder="Your Message" rows="4" class="w-full p-3 pl-10 rounded text-gray-800" required></textarea>
+          </div>
+          <button type="submit" class="w-full py-3 rounded-lg bg-gradient-to-r from-teal-500 to-gray-700 hover:from-teal-600 hover:to-gray-600 text-white font-semibold shadow-lg transition">
+            Send Message
+          </button>
+        </form>
+      </div>
 
-  <div class="relative">
-    <span class="absolute left-3 top-3 text-gray-400">👤</span>
-    <input type="text" name="name" placeholder="Your Name" class="w-full p-3 pl-10 rounded text-gray-800" required>
-  </div>
-  <div class="relative">
-    <span class="absolute left-3 top-3 text-gray-400">📧</span>
-    <input type="email" name="email" placeholder="Your Email" class="w-full p-3 pl-10 rounded text-gray-800" required>
-  </div>
-  <div class="relative">
-    <span class="absolute left-3 top-3 text-gray-400">💬</span>
-    <textarea name="message" placeholder="Your Message" rows="4" class="w-full p-3 pl-10 rounded text-gray-800" required></textarea>
-  </div>
-  <button type="submit" class="w-full py-3 rounded-lg bg-gradient-to-r from-teal-500 to-gray-700 hover:from-teal-600 hover:to-gray-600 text-white font-semibold shadow-lg transition">
-    Send Message
-  </button>
-</form>
+      <!-- Inline thank-you message (hidden initially) -->
+      <div id="thank-you" class="hidden text-center text-green-400 mt-4 text-lg font-semibold">
+        Thanks! Your message has been sent.
+      </div>
+
+      <script>
+        const form = document.getElementById('contact-form');
+        const thankYou = document.getElementById('thank-you');
+
+        form.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          const data = new FormData(form);
+
+          const response = await fetch('https://formspree.io/f/myzdlreb', {
+            method: 'POST',
+            body: data,
+            headers: { 'Accept': 'application/json' }
+          });
+
+          if (response.ok) {
+            form.style.display = 'none';
+            thankYou.style.display = 'block';
+          } else {
+            alert('Oops! Something went wrong. Please try again.');
+          }
+        });
+      </script>
+
     </div>
 
     <!-- Contact Info -->
